<resources>
    <string name="app_name">Travel Journal</string>
    <string name="title_activity_main">Navigation Drawer Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="mock_text">New York</string>
    <string name="trip_title">Trip Title</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price_0_euros">Price (0 EUROS)</string>
    <string name="start_date">Start Date</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="enter_a_trip_title_error">Enter a trip title</string>
    <string name="enter_a_destination_error">Enter a destination</string>
    <string name="was_string">was</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque posuere, erat non pellentesque dapibus, diam mi consequat ligula, sed egestas purus leo sed tortor. Praesent sodales enim purus, quis pretium diam suscipit sit amet. Maecenas nec leo ac neque hendrerit pretium eu vel ex. Duis hendrerit et erat vel consectetur. Nulla vitae erat sem. Nulla in sem eu justo cursus faucibus eu in lectus. Curabitur a ultricies nisl. Aliquam vulputate fringilla erat non vestibulum. Nam et metus et est tincidunt maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lectus nisl, lobortis ut neque id, hendrerit molestie turpis. Donec egestas metus vel odio egestas sollicitudin eu vel ligula. Suspendisse pellentesque hendrerit dolor, vitae tincidunt urna rutrum vel. Integer ipsum sapien, pretium ut bibendum vel, eleifend in augue. Sed sit amet rhoncus nunc. Donec nisi leo, scelerisque eget feugiat at, hendrerit laoreet lacus.</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="mark_off">Mark off</string>
    <string name="select_date">Select start and end date</string>
</resources>